--- a/09-web-design-challenge/style.css
+++ b/09-web-design-challenge/style.css
@@ -3,9 +3,15 @@ body {
 }
 
 h1 {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 
+hr {
+    padding: 10px;
+}
+p {
+    margin-bottom: 20px;
+}
 
 .box1{
     background: rgb(223, 223, 223);
@@ -15,6 +21,7 @@ h1 {
     margin-left: 10px;
 }
 
+
 .box2{
     background: rgb(223, 223, 223);
     padding: 20px;
@@ -23,9 +30,14 @@ h1 {
     margin-left: 10px;
 }
 
-.image{
+#image {
     height: 200px;
     width: 200px;
+    padding: 8px;
+}
+.image{
+    height: 140px;
+    width: 140px;
     padding: 5px;
 }
 
@@ -34,4 +46,24 @@ h1 {
     margin: 10px 10px 0px 10px;
 }
 
+.align {
+    text-align: right;
+}
 
+@media (max-width:600px){
+    .box1{
+        background: rgb(223, 223, 223);
+        padding: 10px;
+        margin-top: 10px;
+        margin-right: 5px;
+        margin-left: 5px;
+    }
+    
+    .box2{
+        background: rgb(223, 223, 223);
+        padding: 10px;
+        margin-top: 10px;
+        margin-right: 5px;
+        margin-left: 5px;
+    }
+}
