--- a/09-web-design-challenge/style.css
+++ b/09-web-design-challenge/style.css
@@ -60,11 +60,20 @@ p {
     padding: 5px;
 }
 
+
 .box > image {
     object-fit: cover;
     width: 50%;
     max-height: 50%;
     }
+
+.compareimage {
+    width: 100%;
+    max-height: 100%;
+    display: block;
+    margin: auto;
+    margin-bottom: 15px;
+}
 
 
 .box > h1 {
@@ -81,8 +90,31 @@ p {
     border: 3px solid teal;
 }
 
+.center {
+    text-align: center;
+    color: teal;
+}
 
-@media (max-width: 750px){
+#clicktext {
+    font-size: smaller;
+}
+
+
+
+@media (max-width: 755px){
+    body {
+        background: white;
+    }
+
+    h1 {
+        margin-bottom: 15px;
+        font-size: 20px;
+    }
+
+    #clicktext{
+        font-size: smaller;
+    }
+
     .box{
         background: white;
         padding: 10px;
