--- a/09-web-design-challenge/style.css
+++ b/09-web-design-challenge/style.css
@@ -75,6 +75,15 @@ p {
     margin-bottom: 15px;
 }
 
+.compareimage:hover {
+    border: 3px solid teal;
+    cursor: pointer;
+}
+
+.selectimage:hover {
+    border: 3px solid rgb(4, 0, 135);
+    cursor: pointer;
+}
 
 .box > h1 {
     word-wrap: break-word;
@@ -97,6 +106,27 @@ p {
 
 #clicktext {
     font-size: smaller;
+}
+
+
+/* includes alternating gray and white with on-hover color */
+.table {
+    font-size: 11pt; 
+    font-family: Arial;
+    border-collapse: collapse; 
+    border: 1px solid silver;
+}
+
+.table td, th {
+    padding: 5px;
+}
+
+.table tr:nth-child(even) {
+    background: #E0E0E0;
+}
+
+.table tr:hover {
+    background: silver;
 }
 
 
