--- a/10-web-scraping-challenge/Missions_to_Mars/templates/index.html
+++ b/10-web-scraping-challenge/Missions_to_Mars/templates/index.html
@@ -7,19 +7,27 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mars Scrape</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css')}}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='style.css')}}"> -->
+  <!-- <link rel="stylesheet" href="stylesheet.css" type="text/css"> -->
 </head>
 
 <body>
   <div class="container">
     <div class="box">
       <div class="row">
-        <div class="jumbotron text-center">
-          <h1>Mission to Mars</h1>
-          <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <div class="col-md-12">
+          <div class="jumbotron text-center">
+            <h1>Mission to Mars</h1>
+            <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+          </div>
         </div>
       </div>
+    </div>  
+  </div>
 
+  <div class="container">
+    <div class="box">
       <div class="row">
         <div class="col-md-12">
           <h2>Latest Mars News</h2>
@@ -27,50 +35,66 @@
           <p>{{ mars.news_p }}</p>
         </div>
       </div>
-
+    </div>  
+  </div>
+  <br><br><br>
+  <div class="container">
+    <div class="box">
       <div class="row">
         <div class="col-md-9">
           <h2>Featured Mars Image</h2>
-          <img class ="imagevis" src="{{mars.featured_image_url}}" alt="featured_image">
+            <img class="img-fluid" src="{{mars.featured_image_url}}" alt="featured_image">
         </div>
         <div class="col-md-3">
           <h3>Mars Facts</h3>
-          <p class="table">{{mars.mars_facts_html|safe}}</p>
+          <table class="table table-bordered">{{mars.mars_facts_html|safe}}</table>
         </div>
       </div>  
-
+    </div>  
+  </div>
+  <br><br><br>
+  <div class="container">
+    <div class="box">
       <div class="row">
         <div class="col-md-12">
           <h2 class="center">Mars Hemispheres</h2>
         </div>
       </div>
-
+    </div>  
+  </div>
+  <br>
+  <div class="container">
+    <div class="box">
       <div class="row">
         <div class="col-md-6 center">
-          <img class ="compareimage" src="{{mars.hemi_image_url4}}" alt="Valles Marineris Hemisphere Enhanced">
+          <img class ="img-fluid" src="{{mars.hemi_image_url4}}" alt="Valles Marineris Hemisphere Enhanced">
           <h4 class="center"> {{mars.hemi_title_text4}}</h4>
         </div>
         <div class="col-md-6">
-          <img class ="compareimage" src="{{mars.hemi_image_url1}}" alt="Cerberus Hemisphere Enhanced">
+          <img class ="img-fluid" src="{{mars.hemi_image_url1}}" alt="Cerberus Hemisphere Enhanced">
           <h4 class="center">{{mars.hemi_title_text1}}</h4>
           </a>
         </div>
       </div>
-
+    </div>  
+  </div>
+  <br>
+  <div class="container">
+    <div class="box">
       <div class="row">
         <div class="col-md-6 center">
-          <img class ="compareimage" src="{{mars.hemi_image_url2}}" alt="Schiaparelli Hemisphere Enhanced">
+          <img class ="img-fluid" src="{{mars.hemi_image_url2}}" alt="Schiaparelli Hemisphere Enhanced">
           <h4 class="center">{{mars.hemi_title_text2}}</h4>
         </div>
         <div class="col-md-6">
-          <img class ="compareimage" src="{{mars.hemi_image_url3}}" alt="Syrtis Major Hemisphere Enhanced">
+          <img class ="img-fluid" src="{{mars.hemi_image_url3}}" alt="Syrtis Major Hemisphere Enhanced">
           <h4 class="center">{{mars.hemi_title_text3}}</h4>
           </a>
         </div>
       </div>
-
-    </div>
+    </div>  
   </div>
+
 </body>
 
 </html>
