--- a/13-D3-challenge/D3_data_journalism/assets/css/d3Style.css
+++ b/13-D3-challenge/D3_data_journalism/assets/css/d3Style.css
@@ -1,4 +1,4 @@
-.aText {
+.aText { 
   font-family: sans-serif;
   font-size: 16px;
   text-anchor: middle;
@@ -25,6 +25,7 @@
 
 /* font size dependent on radius, see app.js */
 .stateText {
+  margin-top: 100;
   font-family: sans-serif;
   fill: #fff;
   text-anchor: middle;
